# dagster-oss-dbt-duckdb-demo

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
code_locations/elt_pipelines/: README.md  pyproject.toml
code_locations/elt_pipelines/elt_pipelines/: constants.py  definitions.py  freshness_checks.py  jobs.py  partitions.py  resources.py  sensors.py
code_locations/elt_pipelines/elt_pipelines/assets/: _landing_shared.py  dbt.py  landing_customers.py  landing_locations.py  landing_products.py  landing_sales.py
code_locations/ml_pipelines/: README.md  pyproject.toml
code_locations/ml_pipelines/ml_pipelines/: constants.py  definitions.py  freshness_checks.py  jobs.py  partitions.py  resources.py  sensors.py
code_locations/ml_pipelines/ml_pipelines/assets/: churn.py  dbt.py  segmentation.py
dagster_home/: dagster.yaml  workspace.yaml
data/: README.md
data/landing/: cust_info_2026_04_01.csv  loc_a101_2026_04_01.csv  prd_info_2026_04.csv
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/models/: groups.yml  sources.yml
dbt_project/models/landing/: raw_crm_cust_info.sql  raw_crm_prd_info.sql  raw_crm_sales_details.sql  raw_erp_CUST_AZ12.sql  raw_erp_LOC_A101.sql  raw_erp_PX_CAT_G1V2.sql  schema.yml
dbt_project/models/mart/: dim_customers.sql  dim_products.sql  dim_products_history.sql  fct_sales.sql  schema.yml
dbt_project/models/ml_features/: customer_rfm.sql  schema.yml
dbt_project/seeds/: schema.yml
docker/: Dockerfile.code-location  Dockerfile.dagster
future_landing_data/: README.md
scripts/: build_dbt_manifest.sh  generate_future_landing_data.py  rebase_day1_csvs.sh  reset_demo.sh  wipe.sh
(+10 files in other folders)
