[project]
name = "dagster_oss_template"
version = "0.1.0"
description = "Local Dagster OSS demo template with DuckDB + dbt + two code locations"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
