[project]
name = "elt_pipelines"
version = "0.1.0"
description = "ELT code location: partitioned CSV ingestion + dbt-duckdb ELT pipeline"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.12.0",
    "dagster-dbt>=0.28.0",
    "dagster-duckdb>=0.28.0",
    "dbt-core>=1.10.0",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "elt_pipelines.definitions"
code_location_name = "elt_pipelines"
